parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instrucciones -> empty
Rule 5     instruccion -> func_main
Rule 6     instruccion -> imprimir_instr
Rule 7     instruccion -> definicion_instr
Rule 8     instruccion -> asignacion_instr
Rule 9     instruccion -> def_asig_instr
Rule 10    instruccion -> while_instr
Rule 11    instruccion -> if_instr
Rule 12    instruccion -> switch_instr
Rule 13    instruccion -> for_instr
Rule 14    instruccion -> expresion
Rule 15    instruccion -> break_instr
Rule 16    def_instr_prima -> PTCOMA
Rule 17    def_instr_prima -> empty
Rule 18    empty -> <empty>
Rule 19    func_main -> MAIN PARIZQ PARDER LLAVIZQ instrucciones LLAVDER
Rule 20    imprimir_instr -> PRINT PARIZQ expresion PARDER def_instr_prima
Rule 21    definicion_instr -> VAR ID def_instr_prima
Rule 22    asignacion_instr -> ID IGUAL expresion def_instr_prima
Rule 23    def_asig_instr -> VAR ID IGUAL expresion def_instr_prima
Rule 24    if_instr -> IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER
Rule 25    if_instr -> IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER
Rule 26    if_instr -> IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE if_instr
Rule 27    while_instr -> WHILE PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER
Rule 28    break_instr -> BREAK
Rule 29    switch_instr -> SWITCH PARIZQ expresion PARDER LLAVIZQ cases LLAVDER
Rule 30    switch_instr -> SWITCH PARIZQ expresion PARDER LLAVIZQ default_instr LLAVDER
Rule 31    switch_instr -> SWITCH PARIZQ expresion PARDER LLAVIZQ cases default_instr LLAVDER
Rule 32    cases -> cases case_instr
Rule 33    cases -> case_instr
Rule 34    case_instr -> CASE expresion DOSPUNTOS instrucciones def_instr_prima
Rule 35    default_instr -> DEFAULT DOSPUNTOS instrucciones def_instr_prima
Rule 36    for_instr -> FOR PARIZQ def_asign_for def_instr_prima expresion def_instr_prima expresion PARDER LLAVIZQ instrucciones LLAVDER
Rule 37    def_asign_for -> ID
Rule 38    def_asign_for -> asignacion_instr
Rule 39    def_asign_for -> def_asig_instr
Rule 40    expresion -> NULL
Rule 41    expresion -> expresion INCREMENT def_instr_prima
Rule 42    expresion -> expresion DECREMENT def_instr_prima
Rule 43    expresion -> expresion MAS expresion
Rule 44    expresion -> expresion MENOS expresion
Rule 45    expresion -> expresion POR expresion
Rule 46    expresion -> expresion DIVIDIDO expresion
Rule 47    expresion -> expresion ELEVADO expresion
Rule 48    expresion -> expresion MOD expresion
Rule 49    expresion -> expresion AND expresion
Rule 50    expresion -> expresion OR expresion
Rule 51    expresion -> expresion MAYQUE expresion
Rule 52    expresion -> expresion MENQUE expresion
Rule 53    expresion -> expresion MAYIGUALQUE expresion
Rule 54    expresion -> expresion MENIGUALQUE expresion
Rule 55    expresion -> expresion IGUALQUE expresion
Rule 56    expresion -> expresion NIGUALQUE expresion
Rule 57    expresion -> MENOS expresion
Rule 58    expresion -> NOT expresion
Rule 59    expresion -> PARIZQ expresion PARDER
Rule 60    expresion -> ID
Rule 61    expresion -> ENTERO
Rule 62    expresion -> DECIMAL
Rule 63    expresion -> CADENA
Rule 64    expresion -> CHAR
Rule 65    expresion -> TRUE
Rule 66    expresion -> FALSE

Terminals, with rules where they appear

AND                  : 49
BREAK                : 28
CADENA               : 63
CASE                 : 34
CHAR                 : 64
DECIMAL              : 62
DECREMENT            : 42
DEFAULT              : 35
DIVIDIDO             : 46
DOSPUNTOS            : 34 35
ELEVADO              : 47
ELSE                 : 25 26
ENTERO               : 61
FALSE                : 66
FOR                  : 36
ID                   : 21 22 23 37 60
IF                   : 24 25 26
IGUAL                : 22 23
IGUALQUE             : 55
INCREMENT            : 41
LLAVDER              : 19 24 25 25 26 27 29 30 31 36
LLAVIZQ              : 19 24 25 25 26 27 29 30 31 36
MAIN                 : 19
MAS                  : 43
MAYIGUALQUE          : 53
MAYQUE               : 51
MENIGUALQUE          : 54
MENOS                : 44 57
MENQUE               : 52
MOD                  : 48
NIGUALQUE            : 56
NOT                  : 58
NULL                 : 40
OR                   : 50
PARDER               : 19 20 24 25 26 27 29 30 31 36 59
PARIZQ               : 19 20 24 25 26 27 29 30 31 36 59
POR                  : 45
PRINT                : 20
PTCOMA               : 16
SWITCH               : 29 30 31
TRUE                 : 65
VAR                  : 21 23
WHILE                : 27
error                : 

Nonterminals, with rules where they appear

asignacion_instr     : 8 38
break_instr          : 15
case_instr           : 32 33
cases                : 29 31 32
def_asig_instr       : 9 39
def_asign_for        : 36
def_instr_prima      : 20 21 22 23 34 35 36 36 41 42
default_instr        : 30 31
definicion_instr     : 7
empty                : 4 17
expresion            : 14 20 22 23 24 25 26 27 29 30 31 34 36 36 41 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 58 59
for_instr            : 13
func_main            : 5
if_instr             : 11 26
imprimir_instr       : 6
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 19 24 25 25 26 27 34 35 36
switch_instr         : 12
while_instr          : 10

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instrucciones -> . empty
    (5) instruccion -> . func_main
    (6) instruccion -> . imprimir_instr
    (7) instruccion -> . definicion_instr
    (8) instruccion -> . asignacion_instr
    (9) instruccion -> . def_asig_instr
    (10) instruccion -> . while_instr
    (11) instruccion -> . if_instr
    (12) instruccion -> . switch_instr
    (13) instruccion -> . for_instr
    (14) instruccion -> . expresion
    (15) instruccion -> . break_instr
    (18) empty -> .
    (19) func_main -> . MAIN PARIZQ PARDER LLAVIZQ instrucciones LLAVDER
    (20) imprimir_instr -> . PRINT PARIZQ expresion PARDER def_instr_prima
    (21) definicion_instr -> . VAR ID def_instr_prima
    (22) asignacion_instr -> . ID IGUAL expresion def_instr_prima
    (23) def_asig_instr -> . VAR ID IGUAL expresion def_instr_prima
    (27) while_instr -> . WHILE PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER
    (24) if_instr -> . IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER
    (25) if_instr -> . IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER
    (26) if_instr -> . IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE if_instr
    (29) switch_instr -> . SWITCH PARIZQ expresion PARDER LLAVIZQ cases LLAVDER
    (30) switch_instr -> . SWITCH PARIZQ expresion PARDER LLAVIZQ default_instr LLAVDER
    (31) switch_instr -> . SWITCH PARIZQ expresion PARDER LLAVIZQ cases default_instr LLAVDER
    (36) for_instr -> . FOR PARIZQ def_asign_for def_instr_prima expresion def_instr_prima expresion PARDER LLAVIZQ instrucciones LLAVDER
    (40) expresion -> . NULL
    (41) expresion -> . expresion INCREMENT def_instr_prima
    (42) expresion -> . expresion DECREMENT def_instr_prima
    (43) expresion -> . expresion MAS expresion
    (44) expresion -> . expresion MENOS expresion
    (45) expresion -> . expresion POR expresion
    (46) expresion -> . expresion DIVIDIDO expresion
    (47) expresion -> . expresion ELEVADO expresion
    (48) expresion -> . expresion MOD expresion
    (49) expresion -> . expresion AND expresion
    (50) expresion -> . expresion OR expresion
    (51) expresion -> . expresion MAYQUE expresion
    (52) expresion -> . expresion MENQUE expresion
    (53) expresion -> . expresion MAYIGUALQUE expresion
    (54) expresion -> . expresion MENIGUALQUE expresion
    (55) expresion -> . expresion IGUALQUE expresion
    (56) expresion -> . expresion NIGUALQUE expresion
    (57) expresion -> . MENOS expresion
    (58) expresion -> . NOT expresion
    (59) expresion -> . PARIZQ expresion PARDER
    (60) expresion -> . ID
    (61) expresion -> . ENTERO
    (62) expresion -> . DECIMAL
    (63) expresion -> . CADENA
    (64) expresion -> . CHAR
    (65) expresion -> . TRUE
    (66) expresion -> . FALSE
    (28) break_instr -> . BREAK

  ! shift/reduce conflict for MAIN resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for NULL resolved as shift
  ! shift/reduce conflict for MENOS resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for PARIZQ resolved as shift
  ! shift/reduce conflict for ENTERO resolved as shift
  ! shift/reduce conflict for DECIMAL resolved as shift
  ! shift/reduce conflict for CADENA resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
    $end            reduce using rule 18 (empty -> .)
    MAIN            shift and go to state 16
    PRINT           shift and go to state 18
    VAR             shift and go to state 19
    ID              shift and go to state 20
    WHILE           shift and go to state 21
    IF              shift and go to state 22
    SWITCH          shift and go to state 23
    FOR             shift and go to state 24
    NULL            shift and go to state 25
    MENOS           shift and go to state 26
    NOT             shift and go to state 27
    PARIZQ          shift and go to state 17
    ENTERO          shift and go to state 28
    DECIMAL         shift and go to state 29
    CADENA          shift and go to state 30
    CHAR            shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    BREAK           shift and go to state 34

  ! MAIN            [ reduce using rule 18 (empty -> .) ]
  ! PRINT           [ reduce using rule 18 (empty -> .) ]
  ! VAR             [ reduce using rule 18 (empty -> .) ]
  ! ID              [ reduce using rule 18 (empty -> .) ]
  ! WHILE           [ reduce using rule 18 (empty -> .) ]
  ! IF              [ reduce using rule 18 (empty -> .) ]
  ! SWITCH          [ reduce using rule 18 (empty -> .) ]
  ! FOR             [ reduce using rule 18 (empty -> .) ]
  ! NULL            [ reduce using rule 18 (empty -> .) ]
  ! MENOS           [ reduce using rule 18 (empty -> .) ]
  ! NOT             [ reduce using rule 18 (empty -> .) ]
  ! PARIZQ          [ reduce using rule 18 (empty -> .) ]
  ! ENTERO          [ reduce using rule 18 (empty -> .) ]
  ! DECIMAL         [ reduce using rule 18 (empty -> .) ]
  ! CADENA          [ reduce using rule 18 (empty -> .) ]
  ! CHAR            [ reduce using rule 18 (empty -> .) ]
  ! TRUE            [ reduce using rule 18 (empty -> .) ]
  ! FALSE           [ reduce using rule 18 (empty -> .) ]
  ! BREAK           [ reduce using rule 18 (empty -> .) ]

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    empty                          shift and go to state 4
    func_main                      shift and go to state 5
    imprimir_instr                 shift and go to state 6
    definicion_instr               shift and go to state 7
    asignacion_instr               shift and go to state 8
    def_asig_instr                 shift and go to state 9
    while_instr                    shift and go to state 10
    if_instr                       shift and go to state 11
    switch_instr                   shift and go to state 12
    for_instr                      shift and go to state 13
    expresion                      shift and go to state 14
    break_instr                    shift and go to state 15

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (5) instruccion -> . func_main
    (6) instruccion -> . imprimir_instr
    (7) instruccion -> . definicion_instr
    (8) instruccion -> . asignacion_instr
    (9) instruccion -> . def_asig_instr
    (10) instruccion -> . while_instr
    (11) instruccion -> . if_instr
    (12) instruccion -> . switch_instr
    (13) instruccion -> . for_instr
    (14) instruccion -> . expresion
    (15) instruccion -> . break_instr
    (19) func_main -> . MAIN PARIZQ PARDER LLAVIZQ instrucciones LLAVDER
    (20) imprimir_instr -> . PRINT PARIZQ expresion PARDER def_instr_prima
    (21) definicion_instr -> . VAR ID def_instr_prima
    (22) asignacion_instr -> . ID IGUAL expresion def_instr_prima
    (23) def_asig_instr -> . VAR ID IGUAL expresion def_instr_prima
    (27) while_instr -> . WHILE PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER
    (24) if_instr -> . IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER
    (25) if_instr -> . IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER
    (26) if_instr -> . IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE if_instr
    (29) switch_instr -> . SWITCH PARIZQ expresion PARDER LLAVIZQ cases LLAVDER
    (30) switch_instr -> . SWITCH PARIZQ expresion PARDER LLAVIZQ default_instr LLAVDER
    (31) switch_instr -> . SWITCH PARIZQ expresion PARDER LLAVIZQ cases default_instr LLAVDER
    (36) for_instr -> . FOR PARIZQ def_asign_for def_instr_prima expresion def_instr_prima expresion PARDER LLAVIZQ instrucciones LLAVDER
    (40) expresion -> . NULL
    (41) expresion -> . expresion INCREMENT def_instr_prima
    (42) expresion -> . expresion DECREMENT def_instr_prima
    (43) expresion -> . expresion MAS expresion
    (44) expresion -> . expresion MENOS expresion
    (45) expresion -> . expresion POR expresion
    (46) expresion -> . expresion DIVIDIDO expresion
    (47) expresion -> . expresion ELEVADO expresion
    (48) expresion -> . expresion MOD expresion
    (49) expresion -> . expresion AND expresion
    (50) expresion -> . expresion OR expresion
    (51) expresion -> . expresion MAYQUE expresion
    (52) expresion -> . expresion MENQUE expresion
    (53) expresion -> . expresion MAYIGUALQUE expresion
    (54) expresion -> . expresion MENIGUALQUE expresion
    (55) expresion -> . expresion IGUALQUE expresion
    (56) expresion -> . expresion NIGUALQUE expresion
    (57) expresion -> . MENOS expresion
    (58) expresion -> . NOT expresion
    (59) expresion -> . PARIZQ expresion PARDER
    (60) expresion -> . ID
    (61) expresion -> . ENTERO
    (62) expresion -> . DECIMAL
    (63) expresion -> . CADENA
    (64) expresion -> . CHAR
    (65) expresion -> . TRUE
    (66) expresion -> . FALSE
    (28) break_instr -> . BREAK

    $end            reduce using rule 1 (init -> instrucciones .)
    MAIN            shift and go to state 16
    PRINT           shift and go to state 18
    VAR             shift and go to state 19
    ID              shift and go to state 20
    WHILE           shift and go to state 21
    IF              shift and go to state 22
    SWITCH          shift and go to state 23
    FOR             shift and go to state 24
    NULL            shift and go to state 25
    MENOS           shift and go to state 26
    NOT             shift and go to state 27
    PARIZQ          shift and go to state 17
    ENTERO          shift and go to state 28
    DECIMAL         shift and go to state 29
    CADENA          shift and go to state 30
    CHAR            shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    BREAK           shift and go to state 34

    instruccion                    shift and go to state 35
    func_main                      shift and go to state 5
    imprimir_instr                 shift and go to state 6
    definicion_instr               shift and go to state 7
    asignacion_instr               shift and go to state 8
    def_asig_instr                 shift and go to state 9
    while_instr                    shift and go to state 10
    if_instr                       shift and go to state 11
    switch_instr                   shift and go to state 12
    for_instr                      shift and go to state 13
    expresion                      shift and go to state 14
    break_instr                    shift and go to state 15

state 3

    (3) instrucciones -> instruccion .

    MAIN            reduce using rule 3 (instrucciones -> instruccion .)
    PRINT           reduce using rule 3 (instrucciones -> instruccion .)
    VAR             reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    SWITCH          reduce using rule 3 (instrucciones -> instruccion .)
    FOR             reduce using rule 3 (instrucciones -> instruccion .)
    NULL            reduce using rule 3 (instrucciones -> instruccion .)
    MENOS           reduce using rule 3 (instrucciones -> instruccion .)
    NOT             reduce using rule 3 (instrucciones -> instruccion .)
    PARIZQ          reduce using rule 3 (instrucciones -> instruccion .)
    ENTERO          reduce using rule 3 (instrucciones -> instruccion .)
    DECIMAL         reduce using rule 3 (instrucciones -> instruccion .)
    CADENA          reduce using rule 3 (instrucciones -> instruccion .)
    CHAR            reduce using rule 3 (instrucciones -> instruccion .)
    TRUE            reduce using rule 3 (instrucciones -> instruccion .)
    FALSE           reduce using rule 3 (instrucciones -> instruccion .)
    BREAK           reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVDER         reduce using rule 3 (instrucciones -> instruccion .)
    PTCOMA          reduce using rule 3 (instrucciones -> instruccion .)
    DEFAULT         reduce using rule 3 (instrucciones -> instruccion .)
    CASE            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instrucciones -> empty .

    MAIN            reduce using rule 4 (instrucciones -> empty .)
    PRINT           reduce using rule 4 (instrucciones -> empty .)
    VAR             reduce using rule 4 (instrucciones -> empty .)
    ID              reduce using rule 4 (instrucciones -> empty .)
    WHILE           reduce using rule 4 (instrucciones -> empty .)
    IF              reduce using rule 4 (instrucciones -> empty .)
    SWITCH          reduce using rule 4 (instrucciones -> empty .)
    FOR             reduce using rule 4 (instrucciones -> empty .)
    NULL            reduce using rule 4 (instrucciones -> empty .)
    MENOS           reduce using rule 4 (instrucciones -> empty .)
    NOT             reduce using rule 4 (instrucciones -> empty .)
    PARIZQ          reduce using rule 4 (instrucciones -> empty .)
    ENTERO          reduce using rule 4 (instrucciones -> empty .)
    DECIMAL         reduce using rule 4 (instrucciones -> empty .)
    CADENA          reduce using rule 4 (instrucciones -> empty .)
    CHAR            reduce using rule 4 (instrucciones -> empty .)
    TRUE            reduce using rule 4 (instrucciones -> empty .)
    FALSE           reduce using rule 4 (instrucciones -> empty .)
    BREAK           reduce using rule 4 (instrucciones -> empty .)
    $end            reduce using rule 4 (instrucciones -> empty .)
    LLAVDER         reduce using rule 4 (instrucciones -> empty .)
    PTCOMA          reduce using rule 4 (instrucciones -> empty .)
    DEFAULT         reduce using rule 4 (instrucciones -> empty .)
    CASE            reduce using rule 4 (instrucciones -> empty .)


state 5

    (5) instruccion -> func_main .

    MAIN            reduce using rule 5 (instruccion -> func_main .)
    PRINT           reduce using rule 5 (instruccion -> func_main .)
    VAR             reduce using rule 5 (instruccion -> func_main .)
    ID              reduce using rule 5 (instruccion -> func_main .)
    WHILE           reduce using rule 5 (instruccion -> func_main .)
    IF              reduce using rule 5 (instruccion -> func_main .)
    SWITCH          reduce using rule 5 (instruccion -> func_main .)
    FOR             reduce using rule 5 (instruccion -> func_main .)
    NULL            reduce using rule 5 (instruccion -> func_main .)
    MENOS           reduce using rule 5 (instruccion -> func_main .)
    NOT             reduce using rule 5 (instruccion -> func_main .)
    PARIZQ          reduce using rule 5 (instruccion -> func_main .)
    ENTERO          reduce using rule 5 (instruccion -> func_main .)
    DECIMAL         reduce using rule 5 (instruccion -> func_main .)
    CADENA          reduce using rule 5 (instruccion -> func_main .)
    CHAR            reduce using rule 5 (instruccion -> func_main .)
    TRUE            reduce using rule 5 (instruccion -> func_main .)
    FALSE           reduce using rule 5 (instruccion -> func_main .)
    BREAK           reduce using rule 5 (instruccion -> func_main .)
    $end            reduce using rule 5 (instruccion -> func_main .)
    LLAVDER         reduce using rule 5 (instruccion -> func_main .)
    PTCOMA          reduce using rule 5 (instruccion -> func_main .)
    DEFAULT         reduce using rule 5 (instruccion -> func_main .)
    CASE            reduce using rule 5 (instruccion -> func_main .)


state 6

    (6) instruccion -> imprimir_instr .

    MAIN            reduce using rule 6 (instruccion -> imprimir_instr .)
    PRINT           reduce using rule 6 (instruccion -> imprimir_instr .)
    VAR             reduce using rule 6 (instruccion -> imprimir_instr .)
    ID              reduce using rule 6 (instruccion -> imprimir_instr .)
    WHILE           reduce using rule 6 (instruccion -> imprimir_instr .)
    IF              reduce using rule 6 (instruccion -> imprimir_instr .)
    SWITCH          reduce using rule 6 (instruccion -> imprimir_instr .)
    FOR             reduce using rule 6 (instruccion -> imprimir_instr .)
    NULL            reduce using rule 6 (instruccion -> imprimir_instr .)
    MENOS           reduce using rule 6 (instruccion -> imprimir_instr .)
    NOT             reduce using rule 6 (instruccion -> imprimir_instr .)
    PARIZQ          reduce using rule 6 (instruccion -> imprimir_instr .)
    ENTERO          reduce using rule 6 (instruccion -> imprimir_instr .)
    DECIMAL         reduce using rule 6 (instruccion -> imprimir_instr .)
    CADENA          reduce using rule 6 (instruccion -> imprimir_instr .)
    CHAR            reduce using rule 6 (instruccion -> imprimir_instr .)
    TRUE            reduce using rule 6 (instruccion -> imprimir_instr .)
    FALSE           reduce using rule 6 (instruccion -> imprimir_instr .)
    BREAK           reduce using rule 6 (instruccion -> imprimir_instr .)
    $end            reduce using rule 6 (instruccion -> imprimir_instr .)
    LLAVDER         reduce using rule 6 (instruccion -> imprimir_instr .)
    PTCOMA          reduce using rule 6 (instruccion -> imprimir_instr .)
    DEFAULT         reduce using rule 6 (instruccion -> imprimir_instr .)
    CASE            reduce using rule 6 (instruccion -> imprimir_instr .)


state 7

    (7) instruccion -> definicion_instr .

    MAIN            reduce using rule 7 (instruccion -> definicion_instr .)
    PRINT           reduce using rule 7 (instruccion -> definicion_instr .)
    VAR             reduce using rule 7 (instruccion -> definicion_instr .)
    ID              reduce using rule 7 (instruccion -> definicion_instr .)
    WHILE           reduce using rule 7 (instruccion -> definicion_instr .)
    IF              reduce using rule 7 (instruccion -> definicion_instr .)
    SWITCH          reduce using rule 7 (instruccion -> definicion_instr .)
    FOR             reduce using rule 7 (instruccion -> definicion_instr .)
    NULL            reduce using rule 7 (instruccion -> definicion_instr .)
    MENOS           reduce using rule 7 (instruccion -> definicion_instr .)
    NOT             reduce using rule 7 (instruccion -> definicion_instr .)
    PARIZQ          reduce using rule 7 (instruccion -> definicion_instr .)
    ENTERO          reduce using rule 7 (instruccion -> definicion_instr .)
    DECIMAL         reduce using rule 7 (instruccion -> definicion_instr .)
    CADENA          reduce using rule 7 (instruccion -> definicion_instr .)
    CHAR            reduce using rule 7 (instruccion -> definicion_instr .)
    TRUE            reduce using rule 7 (instruccion -> definicion_instr .)
    FALSE           reduce using rule 7 (instruccion -> definicion_instr .)
    BREAK           reduce using rule 7 (instruccion -> definicion_instr .)
    $end            reduce using rule 7 (instruccion -> definicion_instr .)
    LLAVDER         reduce using rule 7 (instruccion -> definicion_instr .)
    PTCOMA          reduce using rule 7 (instruccion -> definicion_instr .)
    DEFAULT         reduce using rule 7 (instruccion -> definicion_instr .)
    CASE            reduce using rule 7 (instruccion -> definicion_instr .)


state 8

    (8) instruccion -> asignacion_instr .

    MAIN            reduce using rule 8 (instruccion -> asignacion_instr .)
    PRINT           reduce using rule 8 (instruccion -> asignacion_instr .)
    VAR             reduce using rule 8 (instruccion -> asignacion_instr .)
    ID              reduce using rule 8 (instruccion -> asignacion_instr .)
    WHILE           reduce using rule 8 (instruccion -> asignacion_instr .)
    IF              reduce using rule 8 (instruccion -> asignacion_instr .)
    SWITCH          reduce using rule 8 (instruccion -> asignacion_instr .)
    FOR             reduce using rule 8 (instruccion -> asignacion_instr .)
    NULL            reduce using rule 8 (instruccion -> asignacion_instr .)
    MENOS           reduce using rule 8 (instruccion -> asignacion_instr .)
    NOT             reduce using rule 8 (instruccion -> asignacion_instr .)
    PARIZQ          reduce using rule 8 (instruccion -> asignacion_instr .)
    ENTERO          reduce using rule 8 (instruccion -> asignacion_instr .)
    DECIMAL         reduce using rule 8 (instruccion -> asignacion_instr .)
    CADENA          reduce using rule 8 (instruccion -> asignacion_instr .)
    CHAR            reduce using rule 8 (instruccion -> asignacion_instr .)
    TRUE            reduce using rule 8 (instruccion -> asignacion_instr .)
    FALSE           reduce using rule 8 (instruccion -> asignacion_instr .)
    BREAK           reduce using rule 8 (instruccion -> asignacion_instr .)
    $end            reduce using rule 8 (instruccion -> asignacion_instr .)
    LLAVDER         reduce using rule 8 (instruccion -> asignacion_instr .)
    PTCOMA          reduce using rule 8 (instruccion -> asignacion_instr .)
    DEFAULT         reduce using rule 8 (instruccion -> asignacion_instr .)
    CASE            reduce using rule 8 (instruccion -> asignacion_instr .)


state 9

    (9) instruccion -> def_asig_instr .

    MAIN            reduce using rule 9 (instruccion -> def_asig_instr .)
    PRINT           reduce using rule 9 (instruccion -> def_asig_instr .)
    VAR             reduce using rule 9 (instruccion -> def_asig_instr .)
    ID              reduce using rule 9 (instruccion -> def_asig_instr .)
    WHILE           reduce using rule 9 (instruccion -> def_asig_instr .)
    IF              reduce using rule 9 (instruccion -> def_asig_instr .)
    SWITCH          reduce using rule 9 (instruccion -> def_asig_instr .)
    FOR             reduce using rule 9 (instruccion -> def_asig_instr .)
    NULL            reduce using rule 9 (instruccion -> def_asig_instr .)
    MENOS           reduce using rule 9 (instruccion -> def_asig_instr .)
    NOT             reduce using rule 9 (instruccion -> def_asig_instr .)
    PARIZQ          reduce using rule 9 (instruccion -> def_asig_instr .)
    ENTERO          reduce using rule 9 (instruccion -> def_asig_instr .)
    DECIMAL         reduce using rule 9 (instruccion -> def_asig_instr .)
    CADENA          reduce using rule 9 (instruccion -> def_asig_instr .)
    CHAR            reduce using rule 9 (instruccion -> def_asig_instr .)
    TRUE            reduce using rule 9 (instruccion -> def_asig_instr .)
    FALSE           reduce using rule 9 (instruccion -> def_asig_instr .)
    BREAK           reduce using rule 9 (instruccion -> def_asig_instr .)
    $end            reduce using rule 9 (instruccion -> def_asig_instr .)
    LLAVDER         reduce using rule 9 (instruccion -> def_asig_instr .)
    PTCOMA          reduce using rule 9 (instruccion -> def_asig_instr .)
    DEFAULT         reduce using rule 9 (instruccion -> def_asig_instr .)
    CASE            reduce using rule 9 (instruccion -> def_asig_instr .)


state 10

    (10) instruccion -> while_instr .

    MAIN            reduce using rule 10 (instruccion -> while_instr .)
    PRINT           reduce using rule 10 (instruccion -> while_instr .)
    VAR             reduce using rule 10 (instruccion -> while_instr .)
    ID              reduce using rule 10 (instruccion -> while_instr .)
    WHILE           reduce using rule 10 (instruccion -> while_instr .)
    IF              reduce using rule 10 (instruccion -> while_instr .)
    SWITCH          reduce using rule 10 (instruccion -> while_instr .)
    FOR             reduce using rule 10 (instruccion -> while_instr .)
    NULL            reduce using rule 10 (instruccion -> while_instr .)
    MENOS           reduce using rule 10 (instruccion -> while_instr .)
    NOT             reduce using rule 10 (instruccion -> while_instr .)
    PARIZQ          reduce using rule 10 (instruccion -> while_instr .)
    ENTERO          reduce using rule 10 (instruccion -> while_instr .)
    DECIMAL         reduce using rule 10 (instruccion -> while_instr .)
    CADENA          reduce using rule 10 (instruccion -> while_instr .)
    CHAR            reduce using rule 10 (instruccion -> while_instr .)
    TRUE            reduce using rule 10 (instruccion -> while_instr .)
    FALSE           reduce using rule 10 (instruccion -> while_instr .)
    BREAK           reduce using rule 10 (instruccion -> while_instr .)
    $end            reduce using rule 10 (instruccion -> while_instr .)
    LLAVDER         reduce using rule 10 (instruccion -> while_instr .)
    PTCOMA          reduce using rule 10 (instruccion -> while_instr .)
    DEFAULT         reduce using rule 10 (instruccion -> while_instr .)
    CASE            reduce using rule 10 (instruccion -> while_instr .)


state 11

    (11) instruccion -> if_instr .

    MAIN            reduce using rule 11 (instruccion -> if_instr .)
    PRINT           reduce using rule 11 (instruccion -> if_instr .)
    VAR             reduce using rule 11 (instruccion -> if_instr .)
    ID              reduce using rule 11 (instruccion -> if_instr .)
    WHILE           reduce using rule 11 (instruccion -> if_instr .)
    IF              reduce using rule 11 (instruccion -> if_instr .)
    SWITCH          reduce using rule 11 (instruccion -> if_instr .)
    FOR             reduce using rule 11 (instruccion -> if_instr .)
    NULL            reduce using rule 11 (instruccion -> if_instr .)
    MENOS           reduce using rule 11 (instruccion -> if_instr .)
    NOT             reduce using rule 11 (instruccion -> if_instr .)
    PARIZQ          reduce using rule 11 (instruccion -> if_instr .)
    ENTERO          reduce using rule 11 (instruccion -> if_instr .)
    DECIMAL         reduce using rule 11 (instruccion -> if_instr .)
    CADENA          reduce using rule 11 (instruccion -> if_instr .)
    CHAR            reduce using rule 11 (instruccion -> if_instr .)
    TRUE            reduce using rule 11 (instruccion -> if_instr .)
    FALSE           reduce using rule 11 (instruccion -> if_instr .)
    BREAK           reduce using rule 11 (instruccion -> if_instr .)
    $end            reduce using rule 11 (instruccion -> if_instr .)
    LLAVDER         reduce using rule 11 (instruccion -> if_instr .)
    PTCOMA          reduce using rule 11 (instruccion -> if_instr .)
    DEFAULT         reduce using rule 11 (instruccion -> if_instr .)
    CASE            reduce using rule 11 (instruccion -> if_instr .)


state 12

    (12) instruccion -> switch_instr .
